[feature] add movie filter

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -9,6 +9,7 @@
   "bookVolume":"Volume :",
   "bookChapter":"Chapter :",
   "bookEpisode":"Episode :",
+  "bookFavorite":"Favorite",
   "bookAuthorNotKnown":"Unknown author",
   "filterCategory":"Categories",
   "filterEmptyList":"No result",
@@ -34,6 +35,7 @@
   "formTypeLiterature": "Novel",
   "formTypeManga": "Manga",
   "formTypeComic": "Comics",
+  "formTypeMovie": "Movie/Series",
   "formIsFinished": "Collection",
   "formIsBought": "Purchased ?",
   "formIsFavorite": "Favorite ?",
