--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -9,6 +9,7 @@
   "bookVolume":"Volume :",
   "bookChapter":"Chapitre :",
   "bookEpisode":"Episode :",
+  "bookFavorite":"Favori",
   "bookAuthorNotKnown":"Auteur inconnu",
   "filterCategory":"Catégories",
   "filterEmptyList":"Aucun Résultat",
@@ -31,9 +32,10 @@
   "formEpisode": "Episode",
   "formDescription": "Description",
   "formType": "Type",
-  "formTypeLiterature": "Roman",
+  "formTypeLiterature": "Littérature",
   "formTypeManga": "Manga",
   "formTypeComic": "BD",
+  "formTypeMovie": "Film/Série",
   "formIsFinished": "Collection",
   "formIsBought": "Acheté ?",
   "formIsFavorite": "Favori ?",
