--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -47,5 +47,11 @@
   "alertDialogImportTitle": "Import in success",
   "alertDialogImportMessage": "Number of saved lines :",
   "menuImport": "Import a CSV",
-  "menuExport": "Export to CSV"
+  "menuExport": "Export to CSV",
+  "chartTitle": "Statistics",
+  "chartExplanation": "Adapt your filters in your library and the charts will update based on your chosen selection",
+  "pieChartTitle": "Number of books by type",
+  "barChartTitleIsFinish": "Books in progress",
+  "barChartTitleIsBought": "Books possesses",
+  "barChartTitleCount": "Volumetry"
 }
