[feature] add book avatar

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -35,10 +35,13 @@
   "formTypeLiterature": "Novel",
   "formTypeManga": "Manga",
   "formTypeComic": "Comics",
-  "formTypeMovie": "Movie/Series",
+  "formTypeMovie": "Anime/Series",
   "formIsFinished": "Collection",
   "formIsBought": "Purchased ?",
   "formIsFavorite": "Favorite ?",
+  "searchMangaButton": "Find a Manga",
+  "searchAnimeButton": "Find Anime",
+  "deleteImageButton": "Delete image",
   "alertDialogAddTitle": "Book added with Success",
   "alertDialogAddMessage": "Would you like to add another one?",
   "alertDialogDeleteTitle": "Deletion in progress",
