--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -35,10 +35,13 @@
   "formTypeLiterature": "Littérature",
   "formTypeManga": "Manga",
   "formTypeComic": "BD",
-  "formTypeMovie": "Film/Série",
+  "formTypeMovie": "Animé/Série",
   "formIsFinished": "Collection",
   "formIsBought": "Acheté ?",
   "formIsFavorite": "Favori ?",
+  "searchMangaButton": "Chercher un Manga",
+  "searchAnimeButton": "Chercher un Animé",
+  "deleteImageButton": "Supprimer l'image",
   "alertDialogAddTitle": "Livre ajouté avec Succès",
   "alertDialogAddMessage": "Souhaitez-vous en ajouter un autre ?",
   "alertDialogDeleteTitle": "Suppression en cours",
