[feature] add Manga and Anime API to collect data

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -14,9 +14,11 @@
   "filterCategory":"Categories",
   "filterEmptyList":"No result",
   "genericError":"An error has occurred",
+  "genericErrorLabel":"error",
   "genericRetry":"Would you like to try again ?",
   "genericYes":"Yes",
   "genericNo":"No",
+  "genericOk":"OK",
   "addBookTitle":"Add book",
   "addBookSend":"Add",
   "modifyBookTitle":"Modify",
@@ -49,6 +51,9 @@
   "alertDialogAdvancementMessage": "Do you want to increment this series ?",
   "alertDialogImportTitle": "Import in success",
   "alertDialogImportMessage": "Number of saved lines :",
+  "alertDialogSearchMessageSuccess": "Do you want to keep this information?",
+  "alertDialogSearchMessageError": "Check your internet connection or modify your search",
+  "alertDialogSearchMessageEmpty": "The title must not be empty to start a search",
   "menuImport": "Import a CSV",
   "menuExport": "Export to CSV",
   "chartTitle": "Statistics",
