--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -14,9 +14,11 @@
   "filterCategory":"Catégories",
   "filterEmptyList":"Aucun Résultat",
   "genericError":"Une erreur est survenue",
+  "genericErrorLabel":"erreur",
   "genericRetry":"Souhaitez-vous réessayer ?",
   "genericYes":"Oui",
   "genericNo":"Non",
+  "genericOk":"OK",
   "addBookTitle":"Ajouter un livre",
   "addBookSend":"Ajouter",
   "modifyBookTitle":"Modifier",
@@ -49,6 +51,9 @@
   "alertDialogAdvancementMessage": "Voulez-vous incrémenter cette série ?",
   "alertDialogImportTitle": "Import en succès",
   "alertDialogImportMessage": "Nombre de lignes récupérées :",
+  "alertDialogSearchMessageSuccess": "Voulez-vous conserver ces informations ?",
+  "alertDialogSearchMessageError": "Vérifiez votre connexion internet ou modifiez votre recherche",
+  "alertDialogSearchMessageEmpty": "Le titre ne doit pas être vide pour lancer une recherche",
   "menuImport": "Importer un CSV",
   "menuExport": "Exporter en CSV",
   "chartTitle": "Statistiques",
