[feature] add literature API to get novel informations

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -41,9 +41,10 @@
   "formIsFinished": "Collection",
   "formIsBought": "Purchased ?",
   "formIsFavorite": "Favorite ?",
+  "searchBookButton": "Find a Book",
   "searchMangaButton": "Find a Manga",
   "searchAnimeButton": "Find Anime",
-  "deleteImageButton": "Delete image",
+  "deleteImageButton": "Delete",
   "alertDialogAddTitle": "Book added with Success",
   "alertDialogAddMessage": "Would you like to add another one?",
   "alertDialogDeleteTitle": "Deletion in progress",
