--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -41,9 +41,10 @@
   "formIsFinished": "Collection",
   "formIsBought": "Acheté ?",
   "formIsFavorite": "Favori ?",
+  "searchBookButton": "Chercher un Livre",
   "searchMangaButton": "Chercher un Manga",
   "searchAnimeButton": "Chercher un Animé",
-  "deleteImageButton": "Supprimer l'image",
+  "deleteImageButton": "Supprimer",
   "alertDialogAddTitle": "Livre ajouté avec Succès",
   "alertDialogAddMessage": "Souhaitez-vous en ajouter un autre ?",
   "alertDialogDeleteTitle": "Suppression en cours",
