[feature] add button to search a comic

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -42,6 +42,7 @@
   "formIsBought": "Purchased ?",
   "formIsFavorite": "Favorite ?",
   "searchBookButton": "Find a Book",
+  "searchComicButton": "Find a Comic",
   "searchMangaButton": "Find a Manga",
   "searchAnimeButton": "Find Anime",
   "deleteImageButton": "Delete",
