--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -42,6 +42,7 @@
   "formIsBought": "Acheté ?",
   "formIsFavorite": "Favori ?",
   "searchBookButton": "Chercher un Livre",
+  "searchComicButton": "Chercher une BD",
   "searchMangaButton": "Chercher un Manga",
   "searchAnimeButton": "Chercher un Animé",
   "deleteImageButton": "Supprimer",
