--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -3,7 +3,7 @@
   "homeEmptyList" : "No book registered yet",
   "homeSearchTitle": "Write a title, an author ...",
   "bookBuy": "Possesses",
-  "bookNotBuy": "Loaned",
+  "bookNotBuy": "borrowed",
   "bookFinish":"Finished",
   "bookNotFinish":"In progress",
   "bookVolume":"Volume :",
@@ -11,7 +11,7 @@
   "bookEpisode":"Episode :",
   "bookFavorite":"Favorite",
   "bookAuthorNotKnown":"Unknown author",
-  "filterCategory":"Categories",
+  "filterCategory":"Search",
   "filterEmptyList":"No result",
   "genericError":"An error has occurred",
   "genericErrorLabel":"error",
@@ -40,7 +40,7 @@
   "formTypeComic": "Comics",
   "formTypeMovie": "Anime/Series",
   "formIsFinished": "Collection",
-  "formIsBought": "Purchased ?",
+  "formIsBought": "Possesses ?",
   "formIsFavorite": "Favorite ?",
   "searchBookButton": "Find a Book",
   "searchComicButton": "Find a Comic",
