--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -3,7 +3,7 @@
   "homeEmptyList" : "Pas encore de livre enregistré",
   "homeSearchTitle": "Entrez un titre, un auteur ...",
   "bookBuy": "Possédé",
-  "bookNotBuy": "Prêté",
+  "bookNotBuy": "Emprunté",
   "bookFinish":"Terminé",
   "bookNotFinish":"En cours",
   "bookVolume":"Volume :",
@@ -11,7 +11,7 @@
   "bookEpisode":"Episode :",
   "bookFavorite":"Favori",
   "bookAuthorNotKnown":"Auteur inconnu",
-  "filterCategory":"Catégories",
+  "filterCategory":"Recherche",
   "filterEmptyList":"Aucun Résultat",
   "genericError":"Une erreur est survenue",
   "genericErrorLabel":"erreur",
@@ -40,7 +40,7 @@
   "formTypeComic": "BD",
   "formTypeMovie": "Animé/Série",
   "formIsFinished": "Collection",
-  "formIsBought": "Acheté ?",
+  "formIsBought": "Possédé ?",
   "formIsFavorite": "Favori ?",
   "searchBookButton": "Chercher un Livre",
   "searchComicButton": "Chercher une BD",
