[feature] add Book detail page with SVG images + add generic boxDecoration with orange shadow

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -6,11 +6,13 @@
   "bookNotBuy": "borrowed",
   "bookFinish":"Finished",
   "bookNotFinish":"In progress",
-  "bookVolume":"Volume :",
-  "bookChapter":"Chapter :",
-  "bookEpisode":"Episode :",
+  "bookVolume":"Volume",
+  "bookChapter":"Chapter",
+  "bookEpisode":"Episode",
   "bookFavorite":"Favorite",
   "bookAuthorNotKnown":"Unknown author",
+  "bookYearNotKnown":"Unknown year",
+  "bookEditorNotKnown":"Unknown editor",
   "filterCategory":"Search",
   "filterEmptyList":"No result",
   "genericError":"An error has occurred",
