--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -6,11 +6,13 @@
   "bookNotBuy": "Emprunté",
   "bookFinish":"Terminé",
   "bookNotFinish":"En cours",
-  "bookVolume":"Volume :",
-  "bookChapter":"Chapitre :",
-  "bookEpisode":"Episode :",
+  "bookVolume":"Volume",
+  "bookChapter":"Chapitre",
+  "bookEpisode":"Episode",
   "bookFavorite":"Favori",
   "bookAuthorNotKnown":"Auteur inconnu",
+  "bookYearNotKnown":"Année inconnue",
+  "bookEditorNotKnown":"Editeur inconnu",
   "filterCategory":"Recherche",
   "filterEmptyList":"Aucun Résultat",
   "genericError":"Une erreur est survenue",
